Added a downhill halfpipe level, made/set a flat skybox color for it, created BasketDontBreakEgg physics layer and added a few lines of collision code so egg can't break when landing in basket

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ Assets/Textures/Terrain/Thumbs.db.meta
 Assets/Sprites/Thumbs.db.meta
 
 Assets/Wwise/Editor/ProjectData/AkWwiseProjectData*
+Assets/.DS_Store
+.DS_Store
+Assets/.DS_Store
